fix(rest): Fixing the rest test cases
Signed-off-by: Smruti Prakash Sahoo <smruti.sahoo@siemens.com>